style: изменить форматирование stream fix: исправить условие в методе editAdmin класса EventServiceImpl что бы избежать NullPointerException fix: исправить условие для получения только доступных событий в методе getEventsForAll класса EventServiceImpl fix: сократить количество трансформаций в (stream/list) fix: заменить цикл на stream в классе StatisticsServiceImpl в методе getStats fix: уточнить выбрасываемое исключение в методах save и update в классе CategoryServiceImpl